# guee

./: Cargo.toml  README.md
guee/: Cargo.toml
guee/src/: base_widgets.rs  callback.rs  callback_accessor.rs  context.rs  extension_traits.rs  input.rs  layout.rs  lib.rs  main.rs  memory.rs  painter.rs  prelude.rs  shapes.wgsl  theme.rs  widget.rs  widget_id.rs
guee/src/base_widgets/: box_container.rs  button.rs  colored_box.rs  custom_draw_container.rs  drag_value.rs  event_handling_container.rs  image.rs  margin_container.rs  menubar_button.rs  scroll_container.rs  sized_container.rs  spacer.rs  split_pane_container.rs  stack_container.rs  text.rs  text_edit.rs  tinker_container.rs
guee/src/base_widgets/text_edit/: text_buffer.rs
guee_derives/: Cargo.toml
guee_derives/src/: color_macro.rs  derive_builder.rs  lib.rs
guee_example/: Cargo.toml
guee_example/src/: main.rs
src/: base_widgets.rs  callback.rs  context.rs  epaint_shape_routine.rs  input.rs  layout.rs  main.rs  widget.rs
src/base_widgets/: box_container.rs  button.rs  text.rs
