[package]
name = "guee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "1.0.6"
itertools = "0.10.5"
epaint = { path = "../egui/crates/epaint", features = ["bytemuck"] }
egui-wgpu = { path = "../egui/crates/egui-wgpu", features = ["winit"] }
glam = "0.21.2"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
winit = "0.27.2"
pollster = "0.2"
bytemuck = "1"
wgpu = "0.14"
typed-builder = "0.11.0"
higher-order-closure = "0.0.5"
