[workspace]
members = [
    "guee",
    "guee_derives",
    "guee_example",
]

resolver = "2"

[workspace.dependencies]
wgpu = "0.14"
itertools = "0.10.5"
winit = "0.27.2"
epaint = { git = "https://github.com/emilk/egui", rev = "c58ac86935123415ea3c1531d735e708465267b6", features = ["bytemuck"] }
egui-wgpu = { git = "https://github.com/emilk/egui", rev = "c58ac86935123415ea3c1531d735e708465267b6", features = ["winit"] }
