[package]
name = "guee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guee_derives = { path = "../guee_derives" }
slotmap = "1.0.6"
itertools = "0.10.5"
epaint = { git = "https://github.com/emilk/egui", rev = "c58ac86935123415ea3c1531d735e708465267b6", features = ["bytemuck"] }
egui-wgpu = { git = "https://github.com/emilk/egui", rev = "c58ac86935123415ea3c1531d735e708465267b6", features = ["winit"] }
glam = "0.21.2"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
winit = "0.27.2"
pollster = "0.2"
bytemuck = "1"
wgpu = "0.14"
typed-builder = "0.11.0"
higher-order-closure = "0.0.5"
