[package]
name = "guee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guee_derives = { path = "../guee_derives" }
itertools = "0.10.5"
epaint = { git = "https://github.com/emilk/egui", rev = "c58ac86935123415ea3c1531d735e708465267b6", features = ["bytemuck"] }
# epaint = { path = "../../../egui/crates/epaint", features = ["bytemuck"] }
winit = "0.27.2"
bytemuck = "1"
log = "0.4"
