[package]
name = "guee_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guee = { path = "../guee" }
itertools = { workspace = true }
egui-wgpu = { workspace = true }
epaint = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = "0.2"
